--- a/Styles/AppDefaultStyles.axaml
+++ b/Styles/AppDefaultStyles.axaml
@@ -2,7 +2,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <Design.PreviewWith>
         <Border Padding="20">
-            <Button Content="Hello World!"/>
+            <TextBox/>
         </Border>
     </Design.PreviewWith>
 
@@ -19,21 +19,22 @@
 
     <Style Selector="TextBox">
         <Setter Property="CaretBrush" Value="Black"/>
+        <Setter Property="BorderBrush" Value="#c9c9c9"></Setter>
     </Style>
 
     <Style Selector="TextBox /template/ Border#border">
 		<Setter Property="Background" Value="#F0F0F0"></Setter>
-        <Setter Property="BorderBrush" Value="Black"></Setter>
+        <Setter Property="BorderBrush" Value="#F0F0F0"></Setter>
     </Style>
 
     <Style Selector="TextBox:pointerover /template/ Border#border">
 		<Setter Property="Background" Value="#F0F0F0"></Setter>
-        <Setter Property="BorderBrush" Value="Black"></Setter>
+        <Setter Property="BorderBrush" Value="#b8b8b8"></Setter>
     </Style>
 
     <Style Selector="TextBox:focus /template/ Border#border">
 		<Setter Property="Background" Value="#fcfcfc"></Setter>
-        <Setter Property="BorderBrush" Value="Black"></Setter>
+        <Setter Property="BorderBrush" Value="#9e9e9e"></Setter>
     </Style>
 
     <Styles.Resources>
