--- a/Views/WelcomeView.axaml
+++ b/Views/WelcomeView.axaml
@@ -2,7 +2,24 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-             x:Class="ECoopSystem.Views.WelcomeView">
-  Welcome to Avalonia!
+             mc:Ignorable="d" d:DesignWidth="1280" d:DesignHeight="720"
+             Width="1280" Height="720"
+             MinWidth="1280" MinHeight="720"
+             x:Class="ECoopSystem.Views.WelcomeView"
+             Background="White">
+
+  <Grid HorizontalAlignment="Center"
+        VerticalAlignment="Center">
+      <StackPanel Orientation="Vertical">
+          <TextBlock FontWeight="Bold"
+                 FontSize="24"
+                 Text="WELCOME TO E-COOP SUITE"
+                 Foreground="{DynamicResource PrimaryColor}"/>
+          <Button HorizontalAlignment="Center"
+                  Margin="0,20,0,0"
+                  Padding="20,10"
+                  Content="START NOW"
+                  FontWeight="Bold"/>
+      </StackPanel>
+  </Grid>
 </UserControl>
