--- a/Views/BlockingView.axaml
+++ b/Views/BlockingView.axaml
@@ -4,7 +4,8 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:vm="using:ECoopSystem.ViewModels"
              x:DataType="vm:BlockingViewModel"
-             x:Class="ECoopSystem.Views.BlockingView">
+             x:Class="ECoopSystem.Views.BlockingView"
+             Background="White">
 
   <Border Background="White" Padding="32">
 	  <StackPanel Spacing="12" MaxWidth="520" 
