- Added Secure Storage (DPAPI) and remove Loading GIF changed to default (tbc)

--- a/MainWindow.axaml
+++ b/MainWindow.axaml
@@ -12,7 +12,8 @@
         ExtendClientAreaToDecorationsHint="True"
         ExtendClientAreaChromeHints="NoChrome"
         ExtendClientAreaTitleBarHeightHint="0"
-        Title="E-Coop Suite">
+        Title="E-Coop Suite"
+        Icon="/Assets/Icons/ecoopsuite.ico">
 
     <ContentControl Content="{Binding Current}"
                     HorizontalContentAlignment="Stretch"
