- Code obfuscation, string encryption, movement of sensitive data

--- a/Views/ActivationView.axaml
+++ b/Views/ActivationView.axaml
@@ -143,7 +143,7 @@
                     <Grid Width="80" Height="80" HorizontalAlignment="Center">
                         <Ellipse Width="80" 
                                  Height="80" 
-                                 Fill="#4CAF50"/>
+                                 Fill="#50e893"/>
                         <Canvas Width="80" Height="80">
                             <Path Data="M 20 40 L 35 55 L 60 25" 
                                   Stroke="White" 
